Logica di dto